syntax = "proto3";

option csharp_namespace = "Service.Assets.Contracts";

package com.swisschain.dictionaries.grpc;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service AssetPairs {
    rpc GetAll (google.protobuf.Empty) returns (GetAllAssetPairsResponse);
    rpc GetAllByBrokerIds (GetAllAssetPairsByBrokerIdsRequest) returns (GetAllAssetPairsResponse);
    rpc GetAllByBrokerId (GetAllAssetPairsByBrokerIdRequest) returns (GetAllAssetPairsResponse);
    rpc GetById (GetAssetPairByIdRequest) returns (GetAssetPairByIdResponse);
    rpc Add (AddAssetPairRequest) returns (AddAssetPairResponse);
    rpc Update (UpdateAssetPairRequest) returns (google.protobuf.Empty);
    rpc Delete (DeleteAssetPairRequest) returns (google.protobuf.Empty);
}

message GetAllAssetPairsByBrokerIdsRequest {
    repeated string broker_ids = 1;
}

message GetAllAssetPairsByBrokerIdRequest {
    string broker_id = 1;
}

message GetAllAssetPairsResponse {
    repeated AssetPair assetPairs = 1;
}

message GetAssetPairByIdRequest {
    int64 id = 1;
    string broker_id = 2;
}

message GetAssetPairByIdResponse {
    AssetPair assetPair = 1;
}

message AddAssetPairRequest {
    string broker_id = 1;
    string symbol = 2;
    int64 baseAssetId = 3;
    int64 quotingAssetId = 4;
    int32 accuracy = 5;
    string minVolume = 6;
    string maxVolume = 7;
    string maxOppositeVolume = 8;
    string marketOrderPriceThreshold = 9;
    bool is_disabled = 10;
}

message AddAssetPairResponse {
    AssetPair assetPair = 1;
}

message UpdateAssetPairRequest {
    int64 id = 1;
    string broker_id = 2;
    string symbol = 3;
    int64 baseAssetId = 4;
    int64 quotingAssetId = 5;
    int32 accuracy = 6;
    string minVolume = 7;
    string maxVolume = 8;
    string maxOppositeVolume = 9;
    string marketOrderPriceThreshold = 10;
    bool is_disabled = 11;
}

message DeleteAssetPairRequest {
    int64 id = 1;
    string broker_id = 2;
}

message AssetPair {
    int64 id = 1;
    string broker_id = 2;
    string symbol = 3;
    int64 baseAssetId = 4;
    int64 quotingAssetId = 5;
    int32 accuracy = 6;
    string minVolume = 7;
    string maxVolume = 8;
    string maxOppositeVolume = 9;
    string marketOrderPriceThreshold = 10;
    bool is_disabled = 11;
    google.protobuf.Timestamp created = 12;
    google.protobuf.Timestamp modified = 13;
}
